--- a/src/TidyWindow.App/Views/PathPilotPage.xaml
+++ b/src/TidyWindow.App/Views/PathPilotPage.xaml
@@ -34,16 +34,6 @@
             <Setter Property="Margin" Value="0,0,0,12" />
             <Setter Property="SnapsToDevicePixels" Value="True" />
             <Setter Property="UseLayoutRounding" Value="True" />
-            <Setter Property="CacheMode">
-                <Setter.Value>
-                    <BitmapCache EnableClearType="True" />
-                </Setter.Value>
-            </Setter>
-            <Setter Property="Effect">
-                <Setter.Value>
-                    <DropShadowEffect BlurRadius="16" ShadowDepth="0" Color="#02060E" Opacity="0.25" />
-                </Setter.Value>
-            </Setter>
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="BorderBrush" Value="#3A6FA8" />
@@ -244,11 +234,6 @@
                             <DataTrigger Binding="{Binding IsActive}" Value="True">
                                 <Setter Property="Background" Value="#0F1F18" />
                                 <Setter Property="BorderBrush" Value="#2F6F55" />
-                                <Setter Property="Effect">
-                                    <Setter.Value>
-                                        <DropShadowEffect BlurRadius="18" ShadowDepth="0" Color="#1C9C6B" Opacity="0.25" />
-                                    </Setter.Value>
-                                </Setter>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
@@ -403,12 +388,13 @@
                              ItemTemplate="{StaticResource RuntimeCardTemplate}"
                              ScrollViewer.VerticalScrollBarVisibility="Disabled"
                              ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                             ScrollViewer.CanContentScroll="True"
                              VirtualizingPanel.IsVirtualizing="True"
                              VirtualizingPanel.VirtualizationMode="Recycling"
                              SelectionMode="Single">
                         <ListBox.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <ux:AdaptiveTilePanel MinColumnWidth="440" MaxColumnWidth="780" MinColumns="1" MaxColumns="3" ColumnSpacing="28" RowSpacing="24" />
+                                <ux:VirtualizingAdaptiveTilePanel MinColumnWidth="440" MaxColumnWidth="780" MinColumns="1" MaxColumns="3" ColumnSpacing="28" RowSpacing="24" />
                             </ItemsPanelTemplate>
                         </ListBox.ItemsPanel>
                         <ListBox.ItemContainerStyle>
