--- a/src/TidyWindow.App/Views/ResetRescuePage.xaml
+++ b/src/TidyWindow.App/Views/ResetRescuePage.xaml
@@ -4,6 +4,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:controls="clr-namespace:TidyWindow.App.Views"
+      xmlns:ux="clr-namespace:TidyWindow.App.Controls"
       mc:Ignorable="d"
       Title="Reset Rescue"
       Background="Transparent"
